# pytest-httpbin

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  DESCRIPTION.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  release.py  runtests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
certs/: cacert.pem  cert.pem
pytest_httpbin/: __init__.py  certs.py  plugin.py  serve.py
pytest_httpbin/certs/: key.pem
pytest_httpbin/certs/etc/: README.md  certificate.conf  localhost.crt  localhost.csr  localhost.key  rootCA.crt  rootCA.key  rootCA.srl
tests/: conftest.py  test_httpbin.py  test_server.py  util.py
