[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-httpbin"
description = "Easily test your HTTP library against a local copy of httpbin"
authors = [{name = "Kevin McCarthy", email = "me@kevinmccarthy.org"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["pytest-httpbin testing pytest httpbin"]
requires-python = ">=3.7"
dependencies = ["httpbin"]
dynamic = ["version"]

[project.readme]
file = "DESCRIPTION.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/kevin1024/pytest-httpbin"

[project.entry-points]
pytest11 = {httpbin = "pytest_httpbin.plugin"}

[project.optional-dependencies]
test = [
    "requests",
    "pytest",
    "werkzeug<2.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "contrib",
    "docs",
    "tests*",
]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "pytest_httpbin.version.__version__"}

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
filterwarnings = [
    "error",
    'ignore:ast\.(Str|NameConstant) is deprecated:DeprecationWarning:_pytest',
]
xfail_strict = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    minversion=3.28.0
    requires=
        virtualenv>=20.13.2
        tox-gh-actions>=2.9.1
    envlist = py37, py38, py39, py310, pypy3

    [testenv]
    package = wheel
    wheel_build_env = .pkg
    extras = test
    commands = pytest -v -s {posargs}
    install_command = python -I -m pip install --use-pep517 {opts} {packages}

    [testenv:release]
    deps =
        build
        twine
    commands =
        {envpython} -m release
        pyproject-build --sdist
        twine check {toxinidir}/dist/*.*
"""
