[metadata]
name = pytest-httpbin
version = attr:pytest_httpbin.version.__version__
description = Easily test your HTTP library against a local copy of httpbin
long_description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst
url = https://github.com/kevin1024/pytest-httpbin
author = Kevin McCarthy
author_email = me@kevinmccarthy.org
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = pytest-httpbin testing pytest httpbin

[options]
packages = find:
include_package_data = True
install_requires = httpbin
python_requires = >=3.7

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[options.entry_points]
pytest11 =
    httpbin = pytest_httpbin.plugin

[options.extras_require]
test =
    requests
    pytest
    werkzeug<2.1.0

[bdist_wheel]
universal = 1

[flake8]
disable-noqa = True
max-line-length = 88
extend-ignore =
    E203

[tool:pytest]
addopts = --strict-config --strict-markers
filterwarnings =
    error
    ignore:ast\.(Str|NameConstant) is deprecated:DeprecationWarning:_pytest
xfail_strict = true
